--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,16 @@
-/*  your css code here. If applicable */
+input[type="radio"]:nth-of-type(2),
+        input[type="radio"]:nth-of-type(4),
+        input[type="radio"]:nth-of-type(6) {
+            accent-color: red;
+        }
+
+        /* Disable the 2nd radio button */
+        input[type="radio"]:nth-of-type(2) {
+            pointer-events: none; /* Prevent clicking */
+            opacity: 0.6; /* Slightly fade disabled option */
+        }
+
+        /* Select the 3rd radio button by default */
+        input[type="radio"]:nth-of-type(3) {
+            checked: true;
+        }
